Some minor change.

--- a/src/components/Footer/FooterOverlay.css
+++ b/src/components/Footer/FooterOverlay.css
@@ -9,7 +9,7 @@
 
 .app__footerOverlay-black {
   height: 25%;
-  background: var(--color-black);
+  background: var(--color-dark);
 }
 
 .app__footerOverlay-img {
