--- a/src/components/Footer/NewsLetter.css
+++ b/src/components/Footer/NewsLetter.css
@@ -1,7 +1,7 @@
 .app__newsletter {
   padding: 2rem 4rem;
-  border: 1px solid var(--color-golden);
-  background: var(--color-black);
+  border: 1px solid var(--color-primary);
+  background: var(--color-dark);
 }
 
 .app__newsletter-heading {
@@ -15,14 +15,14 @@
 
 .app__newsletter-input input {
   width: 620px;
-  border: 1px solid var(--color-golden);
+  border: 1px solid var(--color-primary);
   border-radius: 5px;
   font-size: 1rem;
-  font-family: var(--font-base);
+  font-family: var(--font-primary);
   color: var(--color-white);
   margin-right: 2rem;
   padding: 0.75rem 1rem;
-  background: var(--color-black);
+  background: var(--color-dark);
 }
 
 .app__newsletter-input button {
