--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--color-black);
+  background: var(--color-dark);
   padding: 1rem 2rem;
 }
 
@@ -31,7 +31,7 @@
 }
 
 .app__navbar-links li:hover {
-  color: var(--color-grey);
+  color: var(--color-light-gray);
 }
 
 .app__navbar-login {
@@ -47,13 +47,13 @@
 }
 
 .app__navbar-login a:hover {
-  border-bottom: 1px solid var(--color-golden);
+  border-bottom: 1px solid var(--color-primary);
 }
 
 .app__navbar-login div {
   width: 1px;
   height: 30px;
-  background-color: var(--color-grey);
+  background-color: var(--color-light-gray);
 }
 
 .app__navbar-smallscreen {
@@ -66,7 +66,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: var(--color-black);
+  background: var(--color-dark);
   transition: 0.5s ease;
 
   flex-direction: column;
@@ -75,7 +75,7 @@
 
 .app__navbar-smallscreen_ovelay .overlay__close {
   font-size: 27px;
-  color: var(--color-golden);
+  color: var(--color-primary);
   cursor: pointer;
   position: absolute;
   top: 20px;
@@ -89,10 +89,10 @@
 .app__navbar-smallscreen_links li {
   margin: 2rem;
   cursor: pointer;
-  color: var(--color-golden);
+  color: var(--color-primary);
   font-size: 2rem;
   text-align: center;
-  font-family: var(--font-base);
+  font-family: var(--font-primary);
 }
 
 .app__navbar-smallscreen_links li:hover {
