--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -23,13 +23,13 @@
 }
 
 .app__chef-sign p:first-child {
-  font-family: var(--font-base);
+  font-family: var(--font-primary);
   font-weight: 400;
   font-size: 32;
   line-height: 41px;
   letter-spacing: 0.04em;
   text-transform: capitalize;
-  color: var(--color-golden);
+  color: var(--color-primary);
 }
 
 .app__chef-sign img {
