--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  background: var(--color-black);
+  background: var(--color-dark);
   padding-top: 0;
 }
 
@@ -48,11 +48,11 @@
 }
 
 .app__footer-links_icons svg:hover {
-  color: var(--color-golden);
+  color: var(--color-primary);
 }
 
 .app__footer-headtext {
-  font-family: var(--font-base);
+  font-family: var(--font-primary);
   color: var(--color-white);
   font-weight: 400;
   letter-spacing: 0.04em;
