--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -1,7 +1,7 @@
 .app__gallery {
   display: flex;
   flex-direction: row;
-  background: var(--color-black);
+  background: var(--color-dark);
   padding: 4rem 0 4rem 6rem;
 }
 
@@ -83,10 +83,10 @@
 }
 
 .gallery__arrow-icon {
-  color: var(--color-golden);
+  color: var(--color-primary);
   font-size: 2rem;
   cursor: pointer;
-  background-color: var(--color-black);
+  background-color: var(--color-dark);
   border-radius: 5px;
 }
 
