--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,10 +1,10 @@
 .app__header {
-  background-color: var(--color-black);
+  background-color: var(--color-dark);
 }
 
 .app__header-h1 {
-  font-family: var(--font-base);
-  color: var(--color-golden);
+  font-family: var(--font-primary);
+  color: var(--color-primary);
   letter-spacing: 0.04em;
   text-transform: uppercase;
   line-height: 117px;
