--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -1,6 +1,6 @@
 .app__specialMenu {
   flex-direction: column;
-  background: var(--color-black);
+  background: var(--color-dark);
 }
 
 .app__specialMenu-title {
@@ -18,7 +18,7 @@
 }
 
 .app__specialMenu-menu_heading {
-  font-family: var(--font-base);
+  font-family: var(--font-primary);
   font-weight: 600;
   font-size: 45px;
   line-height: 58.5px;
