--- a/src/components/Footer/NewsLetter.css
+++ b/src/components/Footer/NewsLetter.css
@@ -48,7 +48,7 @@
 
 @media screen and (max-width: 650px) {
   .app__newsletter {
-    padding: 2rem 0;
+    padding: 2rem 2rem;
     border: none;
   }
 }
