--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -2,6 +2,7 @@
   padding: 2rem 4rem;
   border: 1px solid var(--color-primary);
   background: var(--color-dark);
+  min-width: 650px;
 }
 
 .app__form-heading {
@@ -9,12 +10,12 @@
 }
 
 .app__form-input {
-  flex-direction: row;
+  flex-direction: column;
   margin-top: 3rem;
 }
 
 .app__form-input input {
-  width: 620px;
+  width: 100%;
   border: 1px solid var(--color-primary);
   border-radius: 5px;
   font-size: 1rem;
@@ -22,6 +23,7 @@
   color: var(--color-white);
   margin-right: 2rem;
   padding: 0.75rem 1rem;
+  margin: 0 0 2rem 0;
   background: var(--color-dark);
 }
 
@@ -30,6 +32,10 @@
 }
 
 @media screen and (min-width: 2000px) {
+  .app__form {
+    min-width: 1160px;
+  }
+
   .app__form-input input {
     font-size: 2rem;
   }
@@ -37,11 +43,9 @@
 
 @media screen and (max-width: 990px) {
   .app__form-input {
-    flex-direction: column;
     width: 100%;
   }
   .app__form-input input {
-    margin: 0 0 2rem 0;
     width: 100%;
   }
 }
