--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -1,8 +1,8 @@
-.app__404 {
+.app__error {
   justify-content: center;
   align-items: center;
 }
 
-.app__404-container {
+.app__error-container {
   flex-direction: column;
 }
